--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<a routerLink="account" [queryParams]="{account: 'admin', password: '1234'}">Account with params</a>
+<a routerLink="account" [queryParams]="{account: 'admin', password: '12345'}">Account without params</a>
+
+<h1>Home</h1>
