--- a/src/app/shared/pages/home/home.component.html
+++ b/src/app/shared/pages/home/home.component.html
@@ -1,4 +1,9 @@
 <a routerLink="account" [queryParams]="{account: 'admin', password: '1234'}">Account with params</a>
+<br>
 <a routerLink="account" [queryParams]="{account: 'admin', password: '12345'}">Account without params</a>
+<br>
+<a routerLink="core"> Dashboard </a>
+<br>
+<a routerLink="core/leads"> Leads </a>
 
 <h1>Home</h1>
