--- a/src/app/shared/pages/home/home.component.html
+++ b/src/app/shared/pages/home/home.component.html
@@ -2,8 +2,8 @@
 <br>
 <a routerLink="account" [queryParams]="{account: 'admin', password: '12345'}">Account without params</a>
 <br>
-<a routerLink="core"> Dashboard </a>
+<a routerLink="core" [queryParams]="{account: 'admin', password: '1234'}"> Dashboard </a>
 <br>
-<a routerLink="core/leads"> Leads </a>
+<a routerLink="core/leads" [queryParams]="{account: 'admin', password: '1234'}"> Leads </a>
 
 <h1>Home</h1>
